--- a/components/org.wso2.carbon.identity.api.server.script.library/org.wso2.carbon.identity.api.server.script.library.v1/src/main/resources/scriptLibrary.yaml
+++ b/components/org.wso2.carbon.identity.api.server.script.library/org.wso2.carbon.identity.api.server.script.library.v1/src/main/resources/scriptLibrary.yaml
@@ -2,8 +2,7 @@ openapi: 3.0.0
 info:
   description: >
     This document specifies a **Script Library Management RESTful API** for
-    **WSO2 Identity Server**. This supports Restful APIs for adding, retrieving,	
-    updating, and deleting script libraries in WSO2 Identity Server.
+    **WSO2 Identity Server**
   version: "1.0.0-oas3"
   title: WSO2 Identity Server - Script Library Management API definition
   termsOfService: 'http://swagger.io/terms/'
@@ -25,11 +24,7 @@ paths:
       summary: |
         Add a new script library.
       description: >
-        This API provides the capability to create a new Script library. <br>
-        <b>Permission required:</b> <br>
-            * /permission/admin/manage/functionsLibrarymgt/create <br>
-        <b>Scope required:</b> <br>
-            * internal_functional_lib_create <br>
+        This API provides the capability to create a new Script library.
       operationId: addScriptLibrary
       responses:
         '201':
@@ -69,11 +64,7 @@ paths:
       summary: |
         List script libraries.
       description: >
-        This API provides the capability to list Script Libraries. <br>
-        <b>Permission required:</b> <br>
-            * /permission/admin/manage/functionsLibrarymgt/view <br>
-        <b>Scope required:</b> <br>
-            * internal_functional_lib_view
+        This API provides the capability to list Script Libraries.
       operationId: getScriptLibraries
       parameters:
         - $ref: '#/components/parameters/limitQueryParam'
@@ -117,11 +108,7 @@ paths:
       summary: |
         Get script library.
       description: >
-        This API provides the capability to retrieve the details of a script library using its name.<br>
-        <b>Permission required:</b> <br>
-            * /permission/admin/manage/functionsLibrarymgt/view <br>
-        <b>Scope required:</b> <br>
-            * internal_functional_lib_view
+        This API provides the capability to retrive the script library details by using its name.
       operationId: getScriptLibraryByName
       parameters:
         - name: script-library-name
@@ -165,11 +152,7 @@ paths:
       summary: |
         Delete a script library.
       description: >
-        This API provides the capability to delete a script library using its name.<br>
-        <b>Permission required:</b> <br>
-            * /permission/admin/manage/functionsLibrarymgt/delete <br>
-        <b>Scope required:</b> <br>
-            * internal_functional_lib_delete
+        This API provides the capability to delete an script library by  giving its name.
       operationId: deleteScriptLibrary
       parameters:
         - name: script-library-name
@@ -191,12 +174,6 @@ paths:
           description: Unauthorized
         '403':
           description: Forbidden
-        '404':
-          description: Not Found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
         '500':
           description: Server Error
           content:
@@ -209,11 +186,7 @@ paths:
       summary: |
         Update a script library.
       description: >
-        This API provides the capability to update a script library using its name.<br>
-        <b>Permission required:</b> <br>
-            * /permission/admin/manage/functionsLibrarymgt/update <br>
-        <b>Scope required:</b> <br>
-            * internal_functional_lib_update
+        This API provides the capability to Update a script library of an script library by using name.
       operationId: updateScriptLibrary
       parameters:
         - name: script-library-name
@@ -266,11 +239,7 @@ paths:
       summary: |
         Get the content of the script library.
       description: >
-        This API provides the capability to retrieve the content of a script library using its name.<br>
-        <b>Permission required:</b> <br>
-            * /permission/admin/manage/functionsLibrarymgt/view <br>
-        <b>Scope required:</b> <br>
-            * internal_functional_lib_view
+        This API provides the capability to retrive the content of script library by using its name.
       operationId: getScriptLibraryContentByName
       parameters:
         - name: script-library-name
@@ -359,34 +328,27 @@ components:
       properties:
         name:
           type: string
-          description: 'Name of the script library.'
           example: 'script library name'
         description:
           type: string
-          description: 'Description of the script library.'
           example: 'script library description'
         content-ref:
           type: string
-          description: 'Reference of the content of the script library.'
           example: 'script library content reference'
     ScriptLibraryListResponse:
       type: object
       properties:
         totalResults:
           type: integer
-          description: 'Total number of script libraries.'
           example: 10
         startIndex:
           type: integer
-          description: 'Starting index of the script library.'
           example: 1
         count:
           type: integer
-          description: 'Number of script libraries in the list.'
           example: 10
         scriptLibraries:
           type: array
-          description: 'Set of script libraries.'
           items:
             $ref: '#/components/schemas/ScriptLibrary'
     scriptLibraryPOSTRequest:
@@ -397,15 +359,12 @@ components:
       properties:
         name:
           type: string
-          description: 'Name of the script library.'
           example: 'script library name'
         description:
           type: string
-          description: 'Description of the script library.'
           example: 'script library description'
         content:
           type: string
-          description: 'Content or the code of the script library.'
           format: binary
     scriptLibraryPUTRequest:
       type: object
@@ -414,11 +373,9 @@ components:
       properties:
         description:
           type: string
-          description: 'Description of the script library.'
           example: 'script library description'
         content:
           type: string
-          description: 'Content or the code of the script library.'
           format: binary
     Error:
       type: object
